--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --bs-primary: #2563EB;   /* Blue */
+  --bs-success: #22C55E;   /* Green */
 }
 
 a {
